@@ -10,6 +10,7 @@ PHP                                                                        NEWS
 - Changed SQLite extension to use studlyCaps convention in its OO API. (Marcus)
 - Changed __construct() to always take precedence over old style constructor.
   (Dmitry)
+- Fixed bug #27928 (sqlite incorrectly handles invalid filenames). (Ilia)
 - Fixed bug #27821 (xml_parse() segfaults when xml_set_object() is called from
   class method). (Andi, Rob)
 - Fixed bug #27742 (WDSL SOAP Parsing Schema bug). (Dmitry)
